syntax = "proto3";
package raft; 

option go_package = "pkg/rafttypes";

message TermInfo {
  int32 current_term = 1;
  int32 voted_for = 2;
}

message LogEntry {
  string command = 1;
  int32 term_number = 2;
}
